--- a/demo.html
+++ b/demo.html
@@ -32,10 +32,11 @@
       <div class="text-container">
         <h1>MODEL OF DEEPMATCHER</h1>
         <div class="tags">
-          <a href="https://www.syntekabio.com/">#Syntekabio</a>
+          <a href="https://www.syntekabio.com/" target="_blank">#Syntekabio</a>
+          <a href="https://cloud.syntekabio.com/main" target="_blank">#STB Cloud</a>
+          <a href="#">#AI Drug Development</a>
           <a href="#">#Deepmatcher</a>
           <a href="#">#ADSP</a>
-          <a href="#">#AI Drug Development</a>
           <a href="#">#1700T</a>
           <a href="#">#Biochemical Assay</a>
           <br />
