--- a/src/html/news.html
+++ b/src/html/news.html
@@ -17,6 +17,28 @@
           alt=""
         />
       </a>
+      <div class="col headline">
+        <div class="headline-title">Date : 2023.04.25</div>
+        <table>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>one</td>
+              <td>first</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>two</td>
+              <td>second</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>three</td>
+              <td>third</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
       <div class="chart">
         <canvas id="myChart"></canvas>
       </div>
