--- a/src/html/news.html
+++ b/src/html/news.html
@@ -21,9 +21,7 @@
         <div class="mySlideDiv fade active">
           <h1>Check recently RCSB released data</h1>
           <h3>Update Date : 2023.04.26</h3>
-          <div class="row recently-rcsb">
-            
-          </div>
+          <div class="row recently-rcsb"></div>
         </div>
         <div class="mySlideDiv fade">
           <h1>This is Sparta</h1>
@@ -42,9 +40,7 @@
         <a class="next" onclick="nextSlide()">&#10095;</a>
       </div>
       <div class="row main-contents-wrapper">
-        <div class="contents-1">
-          asd
-        </div>
+        <div class="contents-1">asd</div>
         <div class="row contents-2">
           <div class="col contents-2-1">
             <canvas id="myChart-1"></canvas>
@@ -55,6 +51,12 @@
             <canvas id="myChart-4"></canvas>
           </div>
         </div>
+      </div>
+      <div class="footer">
+        <p>
+          © 2016 Syntekabio, Inc. All rights reserved. <br>
+          이메일무단수집거부 | 개인정보취급방침
+        </p>
       </div>
     </div>
   </body>
