--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,10 +34,10 @@
         <div class="tags">
           <a href="https://www.syntekabio.com/" target="_blank">#Syntekabio</a>
           <a href="https://cloud.syntekabio.com/main" target="_blank">#STB Cloud</a>
-          <a href="#">#AI Drug Development</a>
+          <a href="/src/html/news.html" target="_blank">#Recently RCSB Information</a>
           <a href="#">#Deepmatcher</a>
           <a href="#">#ADSP</a>
-          <a href="#">#1700T</a>
+          <a href="#">#AI Drug Development</a>
           <a href="#">#Biochemical Assay</a>
           <br />
           <a id="start" href="board.html">GET START</a>
