--- a/src/html/news.html
+++ b/src/html/news.html
@@ -20,27 +20,31 @@
       <div class="col headline">
         <div class="mySlideDiv fade active">
           <h1>Check recently RCSB released data</h1>
-          <h3>Update Date : 2023.04.26</h3>
+          <h3>Update Date : 2023.05.04</h3>
           <div class="row recently-rcsb"></div>
         </div>
         <div class="mySlideDiv fade">
-          <h1>This is Sparta</h1>
+          <h1>Key Target Protein</h1>
         </div>
         <div class="mySlideDiv fade">
-          <h1>니가 가라 하와이</h1>
+          <h1>Syntekabio</h1>
+          <h3>AI Drug Development & Discovery</h3>
+        </div>
+        <div class="mySlideDiv fade">
+          <h1>Last 7 days Homo sapiens Protein Structure</h1>
+          <h3><a href='https://www.rcsb.org/search?request=%7B%22query%22%3A%7B%22type%22%3A%22group%22%2C%22nodes%22%3A%5B%7B%22type%22%3A%22group%22%2C%22nodes%22%3A%5B%7B%22type%22%3A%22group%22%2C%22nodes%22%3A%5B%7B%22type%22%3A%22terminal%22%2C%22service%22%3A%22text%22%2C%22parameters%22%3A%7B%22attribute%22%3A%22rcsb_accession_info.initial_release_date%22%2C%22operator%22%3A%22range%22%2C%22value%22%3A%7B%22from%22%3A%22now-1w%22%2C%22include_lower%22%3Afalse%2C%22to%22%3A%22now%22%2C%22include_upper%22%3Atrue%7D%7D%7D%5D%2C%22logical_operator%22%3A%22and%22%7D%5D%2C%22logical_operator%22%3A%22and%22%2C%22label%22%3A%22text%22%7D%5D%2C%22logical_operator%22%3A%22and%22%7D%2C%22return_type%22%3A%22entry%22%2C%22request_options%22%3A%7B%22paginate%22%3A%7B%22start%22%3A0%2C%22rows%22%3A25%7D%2C%22results_content_type%22%3A%5B%22experimental%22%5D%2C%22sort%22%3A%5B%7B%22sort_by%22%3A%22score%22%2C%22direction%22%3A%22desc%22%7D%5D%2C%22scoring_strategy%22%3A%22combined%22%7D%2C%22request_info%22%3A%7B%22query_id%22%3A%22977c3429d9b3b7e7c3101379fd9c8604%22%7D%7D' target="_blank">Go to RCSB Page</a></h3>
         </div>
         <div class="mySlideDiv fade">
           <h1>사랑은 얄미운 나비인가봐</h1>
-        </div>
-        <div class="mySlideDiv fade">
-          <h1>Help me</h1>
         </div>
 
         <a class="prev" onclick="prevSlide()">&#10094;</a>
         <a class="next" onclick="nextSlide()">&#10095;</a>
       </div>
       <div class="row main-contents-wrapper">
-        <div class="contents-1">asd</div>
+        <div class="contents-1">
+          <h1><span>Date : </span><span>May 2023</span></h1>
+        </div>
         <div class="row contents-2">
           <div class="col contents-2-1">
             <canvas id="myChart-1"></canvas>
